syntax = "proto3";

package recordbudget;

option go_package = "github.com/brotherlogic/recordbudget/proto";

message Config {
  int64 last_recordcollection_pull = 1;
  repeated BoughtRecord purchases = 2;
  repeated PreBoughtRecord pre_purchases = 3;
  repeated SoldRecord solds = 4;

  int64 last_order_pull = 6;
  repeated Order orders = 5;
}

message Order {
  string order_id = 1;
  repeated int32 listing_id = 2;
  int64 sale_date = 3;
}

message BoughtRecord {
  int32 instance_id = 1;
  int32 cost = 2;
  int64 bought_date = 3;
}

message PreBoughtRecord {
  int32 id = 1;
  int32 cost = 2;
}

message SoldRecord {
  int32 instance_id = 1;
  int32 price = 2;
  int64 sold_date =3;
}

message GetBudgetRequest {
  int32 year = 1;
}

message GetBudgetResponse {
  int32 spends = 1;
  int32 pre_spends = 5;
  int32 solds = 6;
  int32 budget = 2;
  repeated int32 purchased_ids = 3;
  repeated int32 pre_purchased_ids = 4;
}

service RecordBudgetService {
  rpc GetBudget(GetBudgetRequest) returns (GetBudgetResponse) {};
}